--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
         "bootstrap": "^4.5.2",
         "classnames": "^2.2.6",
         "gh-pages": "^3.1.0",
-        "node-sass": "^4.14.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
         "reactstrap": "^8.5.1",
         "typescript": "~3.7.2"
     },
@@ -47,5 +45,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "node-sass": "^4.14.1",
+        "react-scripts": "^3.4.3"
     }
 }
