--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
-        "@types/classnames": "^2.2.10",
+        "@types/classnames": "^2.2.11",
         "@types/jest": "^24.0.0",
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.0",
-        "@types/react-dom": "^16.9.0",
-        "@types/react-router-dom": "^5.1.5",
-        "@types/reactstrap": "^8.5.1",
-        "bootstrap": "^4.5.2",
+        "@types/node": "^12.20.6",
+        "@types/react": "^16.14.5",
+        "@types/react-dom": "^16.9.11",
+        "@types/react-router-dom": "^5.1.7",
+        "@types/reactstrap": "^8.7.2",
+        "bootstrap": "^4.6.0",
         "classnames": "^2.2.6",
         "gh-pages": "^3.1.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
         "react-router-dom": "^5.2.0",
-        "reactstrap": "^8.5.1",
-        "typescript": "~3.7.2"
+        "reactstrap": "^8.9.0",
+        "typescript": "^3.7.7"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -48,6 +48,6 @@
     },
     "devDependencies": {
         "node-sass": "^4.14.1",
-        "react-scripts": "^3.4.3"
+        "react-scripts": "^3.4.4"
     }
 }
